@@ -10,10 +10,11 @@ version 0.7.1 - ??
  . CocosLive: using cc_playername instead of usr_playername (issue #242)
  . CocosLive: supports "update score" (issue #250)
  . Demos: added performance test (issue #243)
+ . Director: FastDirector doesn't leak autoreleased objects (issue #221)
  . Menu: can be aligned in columns (issue #206)
  . Menu: MenuItem supports LabelAtlas (issue #235)
+ . Sprite: correct transform anchor point (issue #216)
  . TextureAtlas: support for texture2D (issue #161)
- . Director: FastDirector doesn't leak autoreleased objects (issue #221)
 
 version 0.7.0 - 19-Feb-2009
  . Action: elapsed is a property (issue #203)
